# django_minimal

./: README.md  pyproject.toml
myproject/myproject/: settings.py
myproject/store/: admin.py  models.py
myproject/store/management/commands/: generate_data.py
